--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 </head>
 <body class="">
   <header>
-    <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
@@ -77,6 +76,7 @@
         </div>
       </div>
     </nav>
+</main>
 </header>
 
 <!-- Banner principal -->
@@ -97,7 +97,7 @@
 <!-- Pick destacado del parche -->
 <article class="contenedor">
   <article class="tarj"> <!--Bloque-->
-    <a href="" class="tarj__foto zoom"><img src="multimedia/lee sin.jpg" alt="lee"></a>
+    <a id="leesin" href="" class="tarj__foto zoom"><img src="multimedia/lee sin.jpg" alt="lee"></a>
     <article class="tarj__textos">
       <h3 class="tarj__titulo"><a href="#" class="tarj__enlace">Lee Sin</a></h3>
       <p class="tarj__descripcion"> Lee Sin se ha impuesto en el meta de las partidas de high elo en Corea y Eu West, pero no en la jungla, como acostumbramos a verlo. Sus estadísticas básicas son muy altas en comparación al resto de campeones y lo han vuelto una verdadera amenaza para los carrileros superiores y centrales!</p>
@@ -159,9 +159,10 @@
 <footer> <!--Bloque-->
   <div class="centrar">
     <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
+      <div id="grideano" class="row">
+        <div class="primerColumna">
+        <div class="col-9">
+          <p class="pad20 centrar"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
           <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
           <p> Mantenete enterado: <br> 
             <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -169,9 +170,10 @@
             <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
           </p>
           <p class="centrar">
-          <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="META ABUSER" height="33%" width="33%"></p>
+          <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
         </div>
-        <!-- top -->
+      </div>
+       <div class="segundaColumna"> <!-- top -->
         <div class="col espaciado">
           <h4 class="fTitulos">TOP</h4>
           <p class="pad20"><a href="#">Inicio </a></p>
@@ -210,14 +212,13 @@
           <p class="pad20"><a href="#">Podio </a></p>
           <p class="pad20"><a href="#">Mejor campeón    </a></p>
           <p class="pad20"><a href="#">Video informativo    </a></p>
-        </div>
+        </div></div>
         
       </div>
     </div>
 </div>
 
 </footer>
-
 
 
 
