--- a/supp.html
+++ b/supp.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body class="">
-  <header>
+  <header> <!--NAVBAR-->
     <!-- NAVBAR -->
-      <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
@@ -110,7 +110,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="multimedia/Soraka.jpg" class="card-img-top zoom" alt="...">
+        <img src="multimedia/soraka.jpg" class="card-img-top zoom" alt="...">
         <div class="card-body silver">
           <h5 class="card-title colorNegroT">Soraka</h5>
         </div>
@@ -170,8 +170,14 @@
 
 
   <!-- SINERGIAS CON CAMPEON -->
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+    <div class="texto"> <!--Bloque-->
+      <h2 class="tituloCounters centrado">Tiradores <span class="verde">fuertes</span> y <span class="rojo">débiles</span> con Lulu aliada</h2>
+    </div>
+  </div>
+
+
       <main class="gridContainer  container mx-auto w-26 turboMain margenBot">
-        <h2 class="tituloCounters centrado">Tiradores <span class="verde">fuertes</span> y <span class="rojo">débiles</span> con Lulu aliada</h2>
         <section class="margencito"><img class="ffl bordeVerde" src="multimedia/kogmaw.jpg" alt="" height="100%" width="100%"><p class="centrado"> El kit de Lulu es perfecto para KogMaw. Tiene un escudo, una mejora de velocidad de ataque y velocidad de movimiento que KogMaw puede usar muy bien con su W y para hacer kite. Además, siempre que Lulu usa una habilidad en un aliado, su pequeña hada "duendecillo" viaja hacia esa persona y ataca también con cada autoataque que hace el aliado.   </p> </section>
         <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/vayne.jpg" alt="" height="100%" width="100%"><p class="centrado"> Este dúo depende mucho de la habilidad de la Vayne, ya que es un campeón que requiere una destreza y habilidad de kiteo superior a Kog'Maw, pero si el ADC domina Vayne, es un duo imparable.   </p></section>
         <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/jinx.jpg" alt="" height="100%" width="100%"><p class="centrado">Hay poco que decir de esta combinación Lulu-Jinx, es caos, destrucción y frenesí, si logran un derribo y Jinx saca un reset de su pasiva, mas la W de lulu, es una ametralladora, que no solo dispara si no que es inalcanzable por su velocidad y derriten cualquier escuadra que tengan en frente.   </p></section>
@@ -183,9 +189,10 @@
       <footer> <!--Bloque-->
         <div class="centrar">
           <div class="container">
-            <div class="row">
-              <div class="col-4">
-                <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
+            <div id="grideano" class="row">
+              <div class="primerColumna">
+              <div class="col-9">
+                <p class="pad20 centrar"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
                 <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
                 <p> Mantenete enterado: <br> 
                   <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -195,7 +202,8 @@
                 <p class="centrar">
                 <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
               </div>
-              <!-- top -->
+            </div>
+             <div class="segundaColumna"> <!-- top -->
               <div class="col espaciado">
                 <h4 class="fTitulos">TOP</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
@@ -234,7 +242,7 @@
                 <p class="pad20"><a href="#">Podio </a></p>
                 <p class="pad20"><a href="#">Mejor campeón    </a></p>
                 <p class="pad20"><a href="#">Video informativo    </a></p>
-              </div>
+              </div></div>
               
             </div>
           </div>
