--- a/bot.html
+++ b/bot.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+  <header> <!--NAVBAR-->
     <!-- NAVBAR -->
     <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
@@ -77,7 +78,7 @@
         </div>
       </div>
     </nav>
-
+</header>
     <!-- BANNER -->
   <div class="">
     <img src="multimedia/kalista.jpg" alt="" width="100%">
@@ -167,13 +168,13 @@
     <p class="experto pad20 centrar margenBot">
           <iframe width="50%" height="540" src="https://www.youtube.com/embed/cFPOJTDpNO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
     </p>
-  
     <footer> <!--Bloque-->
       <div class="centrar">
         <div class="container">
-          <div class="row">
-            <div class="col-4">
-              <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
+          <div id="grideano" class="row">
+            <div class="primerColumna">
+            <div class="col-9">
+              <p class="pad20 centrar"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
               <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
               <p> Mantenete enterado: <br> 
                 <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -183,7 +184,8 @@
               <p class="centrar">
               <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
             </div>
-            <!-- top -->
+          </div>
+           <div class="segundaColumna"> <!-- top -->
             <div class="col espaciado">
               <h4 class="fTitulos">TOP</h4>
               <p class="pad20"><a href="#">Inicio </a></p>
@@ -222,7 +224,7 @@
               <p class="pad20"><a href="#">Podio </a></p>
               <p class="pad20"><a href="#">Mejor campeón    </a></p>
               <p class="pad20"><a href="#">Video informativo    </a></p>
-            </div>
+            </div></div>
             
           </div>
         </div>
