--- a/jg.html
+++ b/jg.html
@@ -169,9 +169,10 @@
   <footer> <!--Bloque-->
     <div class="centrar">
       <div class="container">
-        <div class="row">
-          <div class="col-4">
-            <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
+        <div id="grideano" class="row">
+          <div class="primerColumna">
+          <div class="col-9">
+            <p class="pad20 centrar"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
             <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
             <p> Mantenete enterado: <br> 
               <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -181,7 +182,8 @@
             <p class="centrar">
             <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
           </div>
-          <!-- top -->
+        </div>
+         <div class="segundaColumna"> <!-- top -->
           <div class="col espaciado">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -220,7 +222,7 @@
             <p class="pad20"><a href="#">Podio </a></p>
             <p class="pad20"><a href="#">Mejor campeón    </a></p>
             <p class="pad20"><a href="#">Video informativo    </a></p>
-          </div>
+          </div></div>
           
         </div>
       </div>
